# llm-jina

./: .gitignore  CHANGELOG.md  HELP_REQUEST.md  README.md  code_agent.md  code_parser.py  jina-metaprompt.md  main.py  progress_tracking.md  pyproject.toml  pytest.ini  test_api.py  test_api_updated.py  test_results.txt
.agent/: EMBEDDING_REFACTOR_SUMMARY.md  TODO.md  awareness_response.tmp  final_code.py  generate_jina_script.py  jina_api_summary.txt  jina_reader_script.py  llm_plugin_summary.txt  original_task.tmp  project_improvements.md  project_overview.md  refactor_progress.md  response.tmp  search.json
.agent/code_agent/: refiner.py  testgen_prompt.txt
.agent/recordings/: deepbloom_20250702_001851.cast  deepbloom_20250702_005354.cast  deepbloom_20250702_005727.cast  deepbloom_20250702_190408.cast  deepbloom_20250702_193027.cast  deepbloom_20250702_193314.cast  deepbloom_20250702_210228.cast  deepbloom_20250702_210703.cast  deepbloom_20250704_211257.cast  deepbloom_20250704_211717.cast  deepbloom_20250704_211751.cast  deepbloom_20250704_213926.cast  deepbloom_20250704_220310.cast  deepbloom_20250704_222042.cast  deepbloom_20250704_222337.cast  deepbloom_20250704_224637.cast  deepbloom_20250704_224943.cast  deepbloom_20250704_225420.cast  deepbloom_20250704_225729.cast  deepbloom_20250704_232109.cast  deepbloom_20250704_232221.cast  deepbloom_20250704_232248.cast
.agent/tmp/: command_output_1751412352735580203.txt  command_output_1751412500224122384.txt  command_output_1751412543015776318.txt  command_output_1751414281861467083.txt  command_output_1751414492631173835.txt  command_output_1751414757080402892.txt  command_output_1751414802747071608.txt  command_output_1751479657426144374.txt  command_output_1751479701776185797.txt  command_output_1751479746202141012.txt  command_output_1751479810993876061.txt  command_output_1751479844888205183.txt  command_output_1751479957790770205.txt  command_output_1751479980433643623.txt  command_output_1751480025065738566.txt  command_output_1751480064293646340.txt  command_output_1751481235298724529.txt  (+20 more)
llm_jina/: __init__.py  api.py  commands.py  exceptions.py  metaprompt.py
prompts/: codegen_prompt.txt  codegen_prompt_stage_1.md  codegen_prompt_stage_2.md
tests/: conftest.py  test_api_latest.py
(+29 files in other folders)
