[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-jina"
version = "0.2.0"
description = "LLM plugin for Jina AI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "llm>=0.20",
    "httpx>=0.27.0",
    "sqlite-utils>=3.36"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy", "isort"]

[tool.setuptools.packages.find]
where = ["src"]  # MUST be here to tell setuptools where to look.

[project.entry-points."llm.commands"]
jina = "llm_jina:register_jina_commands"

