[tool.poetry]
name = "llm-jina"
version = "0.2.2"
description = "LLM plugin for interacting with Jina AI APIs"
authors = ["Thomas Bryan <thom@communal-computing.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "llm_jina", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
llm = ">=0.15"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-mock = "^3.12.0"
black = "^24.4.2"
ruff = "^0.4.4"

[tool.poetry.scripts]
llm-jina = "llm_jina.commands:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.llm]
jina = "llm_jina"
