[tool.poetry]
name = "llm-jina"
version = "0.2.2"
description = "LLM plugin for interacting with Jina AI APIs"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/irthomasthomas/llm-jina"
repository = "https://github.com/irthomasthomas/llm-jina"
documentation = "https://github.com/irthomasthomas/llm-jina#readme"
packages = [{include = "llm_jina", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
llm = ">=0.15" 
click = "^8.0"
requests = "^2.26"
httpx = ">=0.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.llm]
jina = "llm_jina"
